# slack-reports

./: .gitignore  .pre-commit-config.yaml  CONCEPTS.md  Dockerfile  LICENSE  README.md  diagram.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  llm_client.py  llm_factory.py  llm_interface.py  llm_ollama.py  llm_openai.py  prompts.yml  routes.py  slack_client.py  tasks.py  utils.py
app/tests/: test_routes.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ReportForm.tsx  Sidebar.tsx  SummaryForm.tsx  SummaryTaskStatus.tsx  TaskStatus.tsx
frontend/src/types/: index.ts
